# phosphoswitch-evolution

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: lmna_results.csv
scripts/: analyze_results.py  run_evolution.py
src/phosphoswitch_evolution/: __init__.py  evolution.py  io_utils.py  mechanism.py  scoring.py
tests/: test_mechanism.py
