[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phosphoswitch-evolution"
version = "0.1.0"
description = "Computational directed evolution of phosphoswitches via iterative in silico mutagenesis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Cris Darbellay", email = "cris.darby1@gmail.com" },
]
keywords = [
    "protein design",
    "directed evolution",
    "phosphoswitch",
    "ColabFold",
    "LMNA",
    "MAPRE1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "scipy>=1.9",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
phosphoswitch-evolve   = "phosphoswitch_evolution.scripts.run_evolution:main"
phosphoswitch-analyze  = "phosphoswitch_evolution.scripts.analyze_results:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"
